made some changes in faculty section and student section

--- a/Student section/clubs.html
+++ b/Student section/clubs.html
@@ -16,25 +16,37 @@
   
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="https://colleges18.s3.ap-south-1.amazonaws.com/PCU_logo_152d67d738.png" alt="PCU Logo" width="200" height="85" class="d-inline-block align-text-top img-fluid" />
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="mainNavbar">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Student Corner</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Professional Chapters</a></li>
-          <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Clubs</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-        </ul>
-      </div>
+  <nav class="navbar navbar-expand-lg bg-light sticky-top">
+  <div class="container-fluid">
+    <img class="navbar-brand" src="Pcu Thumbnail/Pcu Thumbnail/PCU_logo_152d67d738.png" alt="PCU Logo">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <!-- Dropdowns -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">About</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">About Department</a></li>
+            <li><a class="dropdown-item" href="#">Vision & Mission</a></li>
+          </ul>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="#">Faculty Profile</a></li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Student Corner</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Syllabus</a></li>
+            <li><a class="dropdown-item" href="#">Professional Chapters</a></li>
+            <li><a class="dropdown-item" href="#">Clubs</a></li>
+            <li><a class="dropdown-item" href="#">Workshops</a></li>
+          </ul>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="#">Activities</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Student Satisfaction</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
+<br>
 
   <!-- Page Title -->
   <div class="card text-center p-3 mb-2 text-white" style="background-color: #6e151f;">
