--- a/Student section/clubs.html
+++ b/Student section/clubs.html
@@ -107,6 +107,31 @@
     </div>
   </main>
 
+  
+<footer class="container-fluid text-white w-100 py-5 mt-5">
+  <div class="container">
+    <div class="row text-center text-md-start">
+      <div class="col-md-4 mb-4">
+        <h5 class="fw-bold mb-3">Connect With Us At</h5>
+        <p><i class="bi bi-geo-alt-fill me-2"></i> Gut No. 44, 46, 48, 49 and 50,<br>Sate, Maval<br>(PMRDA) Dist. Pune-412106, Maharashtra, India.</p>
+        <a href="https://www.google.com/maps/place/Pimpri+Chinchwad+University/@18.7486731,73.6048451,17z/data=!3m1!4b1!4m6!3m5!1s0x3bc2addaeb41d919:0xcc551cf73e3bdf1c!8m2!3d18.748668!4d73.60742!16s%2Fg%2F11pv9g71ty?entry=ttu&g_ep=EgoyMDI1MDgxNy4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="footer-link">Visit Us on Google Maps</a>
+      </div>
+      <div class="col-md-4 mb-4">
+        <h5 class="fw-bold mb-3">Contact</h5>
+        <p><i class="bi bi-envelope-fill me-2"></i> pccoeadmin@gmail.com</p>
+      </div>
+      <div class="col-md-4 mb-4">
+        <h5 class="fw-bold mb-3">Important Links</h5>
+        <ul class="list-unstyled">
+          <li><a href="#" class="footer-link">About PCET & PCU</a></li>
+          <li><a href="#" class="footer-link">Academics</a></li>
+          <li><a href="#" class="footer-link">Hostel</a></li>
+          <li><a href="#" class="footer-link">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
 
 
   <!-- Bootstrap JS Bundle -->
