--- a/homepage.html
+++ b/homepage.html
@@ -123,16 +123,19 @@
             <li><a class="dropdown-item" href="#">Vision & Mission</a></li>
           </ul>
         </li>
-        <li class="nav-item"><a class="nav-link" href="#">Faculty Profile</a></li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Student Corner</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Syllabus</a></li>
-            <li><a class="dropdown-item" href="#">Professional Chapters</a></li>
-            <li><a class="dropdown-item" href="#">Clubs</a></li>
-            <li><a class="dropdown-item" href="#">Workshops</a></li>
-          </ul>
-        </li>
+        <li class="nav-item">
+    <a class="nav-link" href="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/Faculty.html">Faculty Profile</a>
+</li>
+<li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Student Corner</a>
+    <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Student%20section/syllabus.html" target="_blank">Syllabus</a></li>
+        <li><a class="dropdown-item" href="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Student%20section/Professional_chapters.html">Professional Chapters</a></li>
+        <li><a class="dropdown-item" href="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Student%20section/clubs.html">Clubs</a></li>
+        <li><a class="dropdown-item" href="workshops-events.html">Workshops</a></li>
+    </ul>
+</li>
+
         <li class="nav-item"><a class="nav-link" href="#">Activities</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Student Satisfaction</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
