--- a/Faculty section/Faculty.html
+++ b/Faculty section/Faculty.html
@@ -8,6 +8,37 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+      <nav class="navbar navbar-expand-lg bg-light sticky-top">
+  <div class="container-fluid">
+    <img class="navbar-brand" src="Pcu Thumbnail/Pcu Thumbnail/PCU_logo_152d67d738.png" alt="PCU Logo">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <!-- Dropdowns -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">About</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">About Department</a></li>
+            <li><a class="dropdown-item" href="#">Vision & Mission</a></li>
+          </ul>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="#">Faculty Profile</a></li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Student Corner</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Syllabus</a></li>
+            <li><a class="dropdown-item" href="#">Professional Chapters</a></li>
+            <li><a class="dropdown-item" href="#">Clubs</a></li>
+            <li><a class="dropdown-item" href="#">Workshops</a></li>
+          </ul>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="#">Activities</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Student Satisfaction</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<br>
     <div class="header-image">
   <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Pcu%20Thumbnail[1]%20(1)/Pcu%20Thumbnail/faculty.png" alt="PCU Faculty Header" class="header-bg-image">
   <div class="header-overlay">
@@ -171,6 +202,34 @@
             </div>
         </div>
     </div>
+    <!-- Footer -->
+<footer class="container-fluid text-white w-100 py-5 mt-5">
+  <div class="container">
+    <div class="row text-center text-md-start">
+      <div class="col-md-4 mb-4">
+        <h5 class="fw-bold mb-3">Connect With Us At</h5>
+        <p><i class="bi bi-geo-alt-fill me-2"></i> Gut No. 44, 46, 48, 49 and 50,<br>Sate, Maval<br>(PMRDA) Dist. Pune-412106,
+Maharashtra, India.</p>
+        <a href="https://www.google.com/maps/place/Pimpri+Chinchwad+University/@18.7486731,73.6048451,17z/data=!3m1!4b1!4m6!3m5!1s0x3bc2addaeb41d919:0xcc551cf73e3bdf1c!8m2!3d18.748668!4d73.60742!16s%2Fg%2F11pv9g71ty?entry=ttu&g_ep=EgoyMDI1MDgxNy4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="footer-link">Visit Us on Google Maps</a>
+      </div>
+      <div class="col-md-4 mb-4">
+        <h5 class="fw-bold mb-3">Contact</h5>
+        <p><i class="bi bi-envelope-fill me-2"></i> pccoeadmin@gmail.com</p>
+      </div>
+      <div class="col-md-4 mb-4">
+        <h5 class="fw-bold mb-3">Important Links</h5>
+        <ul class="list-unstyled">
+          <li><a href="#" class="footer-link">About PCET & PCU</a></li>
+          <li><a href="#" class="footer-link">Academics</a></li>
+          <li><a href="#" class="footer-link">Hostel</a></li>
+          <li><a href="#" class="footer-link">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
+
+
 
     <script src="faculty.js"></script>
 </body>
