--- a/Interface.html
+++ b/Interface.html
@@ -112,7 +112,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg bg-light sticky-top">
   <div class="container-fluid">
-    <img class="navbar-brand" src="Pcu Thumbnail/Pcu Thumbnail/PCU_logo_152d67d738.png" alt="PCU Logo">
+    <img class="navbar-brand" src="D:\VM's PROJECT\Project\Website_ai-ml\Pcu Thumbnail[1] (1)\Pcu Thumbnail\PCU_logo_152d67d738.png" alt="PCU Logo">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <!-- Dropdowns -->
@@ -145,7 +145,7 @@
 <!-- Carousel -->
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2500"> 
   <div class="carousel-inner"> <div class="carousel-item active"> 
-    <img src="https://pcu.edu.in/assets/images/slider2/B.Tech_AI_&_ML.webp" class="d-block w-100 carousel-img" alt="AI & ML Banner"> 
+    <img src="https://pcu.edu.in/assets/images/slider2/B.Tech_AI_&_ML.webp" class="d-block w-auto carousel-img" alt="AI & ML Banner"> 
   </div> 
   <div class="carousel-item"> 
     <img src="https://pcu.edu.in/assets/images/pages/9-1.webp" class="d-block w-100 carousel-img" alt="Slide 2">
