--- a/Student section/clubs.html
+++ b/Student section/clubs.html
@@ -18,7 +18,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg bg-light sticky-top">
   <div class="container-fluid">
-    <img class="navbar-brand" src="Pcu Thumbnail/Pcu Thumbnail/PCU_logo_152d67d738.png" alt="PCU Logo">
+    <img class="navbar-brand" src="" alt="PCU Logo">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <!-- Dropdowns -->
