--- a/Student section/clubs.html
+++ b/Student section/clubs.html
@@ -14,12 +14,10 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg bg-light sticky-top">
   <div class="container-fluid">
-    <img class="navbar-brand" src="Pcu Thumbnail/Pcu Thumbnail/PCU_logo_152d67d738.png" alt="PCU Logo">
+     <img src="https://colleges18.s3.ap-south-1.amazonaws.com/PCU_logo_152d67d738.png" alt="PCU Logo" width="200">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link" href="homepage.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Faculty Profile</a></li>
-        <li class="nav-item dropdown">
+        <li class="nav-item"><a class="nav-link" href="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Interface.html">Home</a></li>
           <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Student Corner</a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Syllabus</a></li>
@@ -108,6 +106,6 @@
 </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="clubs.js"></script>
+  <script src="club.js"></script>
 </body>
 </html>
