--- a/Student section/syllabus.html
+++ b/Student section/syllabus.html
@@ -20,16 +20,13 @@
   <!-- Navigation -->
  <nav class="navbar navbar-expand-lg bg-light sticky-top">
   <div class="container-fluid">
-    <img class="navbar-brand" src="Pcu Thumbnail/Pcu Thumbnail/PCU_logo_152d67d738.png" alt="PCU Logo">
+     <img src="https://colleges18.s3.ap-south-1.amazonaws.com/PCU_logo_152d67d738.png" alt="PCU Logo" width="200">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <!-- Dropdowns -->
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">About</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">About Department</a></li>
-            <li><a class="dropdown-item" href="#">Vision & Mission</a></li>
-          </ul>
+          
+          <li class="nav-item"><a class="nav-link" href="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Interface.html">Home</a></li>
         </li>
         <li class="nav-item"><a class="nav-link" href="#">Faculty Profile</a></li>
         <li class="nav-item dropdown">
@@ -189,7 +186,7 @@
       </div>
       <div class="col-md-4 mb-4">
         <h5 class="fw-bold mb-3">Contact</h5>
-        <p><i class="bi bi-envelope-fill me-2"></i> pccoeadmin@gmail.com</p>
+        <p><i class="bi bi-envelope-fill me-2"></i> info@pcu.edu.in</p>
       </div>
       <div class="col-md-4 mb-4">
         <h5 class="fw-bold mb-3">Important Links</h5>
