--- a/homepage.html
+++ b/homepage.html
@@ -34,9 +34,26 @@
     }
 
     .carousel-img {
-      height: 550px;
-      object-fit: cover;
-    }
+  width: 100%;
+  height: 400px; /* Reduced from 550px for better proportion */
+  object-fit: cover;
+  object-position: center;
+  display: block;
+}
+
+/* Responsive sizing for different screen sizes */
+@media (max-width: 768px) {
+  .carousel-img {
+    height: 250px;
+  }
+}
+
+@media (max-width: 480px) {
+  .carousel-img {
+    height: 200px;
+  }
+}
+
 
     .bg-custom_front {
       background: linear-gradient(135deg, #941C34, #c23d50);
@@ -112,7 +129,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg bg-light sticky-top">
   <div class="container-fluid">
-    <img class="navbar-brand" src="Pcu Thumbnail/Pcu Thumbnail/PCU_logo_152d67d738.png" alt="PCU Logo">
+    <img src="https://colleges18.s3.ap-south-1.amazonaws.com/PCU_logo_152d67d738.png" alt="PCU Logo" width="200">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <!-- Dropdowns -->
@@ -129,9 +146,9 @@
 <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Student Corner</a>
     <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Student%20section/syllabus.html" target="_blank">Syllabus</a></li>
-        <li><a class="dropdown-item" href="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Student%20section/Professional_chapters.html">Professional Chapters</a></li>
-        <li><a class="dropdown-item" href="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Student%20section/clubs.html">Clubs</a></li>
+        <li><a class="dropdown-item" href="../Website_ai-ml/Student section/syllabus.html">Syllabus</a></li>
+        <li><a class="dropdown-item" href="../Website_ai-ml/Student section/Professional_chapters.html">Professional Chapters</a></li>
+        <li><a class="dropdown-item" href="../Website_ai-ml/Student section/clubs.html">Clubs</a></li>
         <li><a class="dropdown-item" href="workshops-events.html">Workshops</a></li>
     </ul>
 </li>
@@ -260,7 +277,7 @@
       </div>
       <div class="col-md-4 mb-4">
         <h5 class="fw-bold mb-3">Contact</h5>
-        <p><i class="bi bi-envelope-fill me-2"></i> pccoeadmin@gmail.com</p>
+        <p><i class="bi bi-envelope-fill me-2"></i> info@pcu.edu.in</p>
       </div>
       <div class="col-md-4 mb-4">
         <h5 class="fw-bold mb-3">Important Links</h5>
