--- a/Faculty section/Faculty.html
+++ b/Faculty section/Faculty.html
@@ -6,21 +6,20 @@
     <title>Faculty Directory</title>
     <link rel="stylesheet" href="faculty.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 </head>
 <body>
-      <nav class="navbar navbar-expand-lg bg-light sticky-top">
+ <nav class="navbar navbar-expand-lg bg-light sticky-top">
   <div class="container-fluid">
-    <img class="navbar-brand" src="Pcu Thumbnail/Pcu Thumbnail/PCU_logo_152d67d738.png" alt="PCU Logo">
+    <img src="https://colleges18.s3.ap-south-1.amazonaws.com/PCU_logo_152d67d738.png" alt="PCU Logo" width="200">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <!-- Dropdowns -->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">About</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">About Department</a></li>
-            <li><a class="dropdown-item" href="#">Vision & Mission</a></li>
-          </ul>
-        </li>
+       <li class="nav-item"><a class="nav-link" href="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Interface.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Faculty Profile</a></li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Student Corner</a>
@@ -39,10 +38,12 @@
   </div>
 </nav>
 <br>
-    <div class="header-image">
-  <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Pcu%20Thumbnail[1]%20(1)/Pcu%20Thumbnail/faculty.png" alt="PCU Faculty Header" class="header-bg-image">
-  <div class="header-overlay">
-    <div class="header-content">
+    <section class="jumbotron text-center bg-custom text-white py-5 mb-0">
+  <div class="container">
+    <h1 class="display-5 fw-bold">AI & ML Faculty</h1>
+    <p class="lead mb-4">Meet Our Esteemed Faculty!!</p>
+  </div>
+</section>
       
     </div>
   </div>
