--- a/Faculty section/Faculty.html
+++ b/Faculty section/Faculty.html
@@ -3,19 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Faculty Directory</title>
+    <title>PCU | Faculty Profile</title>
     <link rel="stylesheet" href="faculty.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
  <nav class="navbar navbar-expand-lg bg-light sticky-top">
   <div class="container-fluid">
-    <img src="https://colleges18.s3.ap-south-1.amazonaws.com/PCU_logo_152d67d738.png" alt="PCU Logo" width="200">
+    <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20website/Pcu%20Thumbnail%5B1%5D%20(1)/Pcu%20Thumbnail/PCU_logo_152d67d738.png?raw=true" alt="PCU Logo" width="200">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <!-- Dropdowns -->
@@ -51,7 +49,7 @@
 
     <div class="faculty-grid">
         <div class="faculty-card">
-            <img class="faculty-img" src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/AI&ML%20Faculty[1]/AI&ML%20Faculty/Swati%20Shirke.png" alt="Dr. Swati Deshmukh">
+            <img class="faculty-img" src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20Faculty%5B1%5D/AI&ML%20Faculty/Swati%20Shirke.png?raw=true" alt="Dr. Swati Deshmukh">
             <div class="faculty-name">Dr. Swati Deshmukh</div>
             <div class="faculty-role">Head of Department</div>
             <div class="faculty-school">School of Engineering & Technology</div>
@@ -63,7 +61,7 @@
         </div>
 
         <div class="faculty-card">
-            <img class="faculty-img" src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/AI&ML%20Faculty[1]/AI&ML%20Faculty/Rahul%20Sonkamble.png" alt="Dr. R. G. Biradar">
+            <img class="faculty-img" src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20Faculty%5B1%5D/AI&ML%20Faculty/Rahul%20Sonkamble.png?raw=true" alt="Dr. R. G. Biradar">
             <div class="faculty-name">Dr. Rahul Ganpatrao Sonkamble</div>
             <div class="faculty-role">Assistant Professor</div>
             <div class="faculty-school">School of Engineering & Technology</div>
@@ -75,7 +73,7 @@
         </div>
 
         <div class="faculty-card">
-            <img class="faculty-img" src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/AI&ML%20Faculty[1]/AI&ML%20Faculty/Dr.Yudhishthir%20Raut.png" alt="Dr. Yudhishthir Raut">
+            <img class="faculty-img" src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20Faculty%5B1%5D/AI&ML%20Faculty/Dr.Yudhishthir%20Raut.png?raw=true" alt="Dr. Yudhishthir Raut">
             <div class="faculty-name">Dr. Yudhishthir Raut</div>
             <div class="faculty-role">Assistant Professor</div>
             <div class="faculty-school">School of Engineering & Technology</div>
@@ -87,7 +85,7 @@
         </div>
 
         <div class="faculty-card">
-            <img class="faculty-img" src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/AI&ML%20Faculty[1]/AI&ML%20Faculty/Rupali%20Zambre.png" alt="Ms. Rupali Samarth Zambre">
+            <img class="faculty-img" src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20Faculty%5B1%5D/AI&ML%20Faculty/Rupali%20Zambre.png?raw=true" alt="Ms. Rupali Samarth Zambre">
             <div class="faculty-name">Ms. Rupali Samarth Zambre</div>
             <div class="faculty-role">Assistant Professor</div>
             <div class="faculty-school">School of Computer Science</div>
@@ -99,7 +97,7 @@
         </div>
 
         <div class="faculty-card">
-            <img class="faculty-img" src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/AI&ML%20Faculty[1]/AI&ML%20Faculty/Nilesh%20Pinjarkar.png" alt="Mr. Nilesh R. Pinjarkar">
+            <img class="faculty-img" src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20Faculty%5B1%5D/AI&ML%20Faculty/Nilesh%20Pinjarkar.png?raw=true" alt="Mr. Nilesh R. Pinjarkar">
             <div class="faculty-name">Mr. Nilesh R. Pinjarkar</div>
             <div class="faculty-role">Assistant Professor</div>
             <div class="faculty-school">School of Information Technology</div>
@@ -111,7 +109,7 @@
         </div>
 
         <div class="faculty-card">
-            <img class="faculty-img" src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/AI&ML%20Faculty[1]/AI&ML%20Faculty/Vaibhavi%20Avachat.jpg" alt="Dr. Meera Rao">
+            <img class="faculty-img" src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20Faculty%5B1%5D/AI&ML%20Faculty/Vaibhavi%20Avachat.jpg?raw=true" alt="Dr. Meera Rao">
             <div class="faculty-name">Vaibhavi Umesh Avachat</div>
             <div class="faculty-role">Assistant Professor</div>
             <div class="faculty-school">School of Electronics</div>
@@ -123,7 +121,7 @@
         </div>
 
         <div class="faculty-card">
-            <img class="faculty-img" src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/AI&ML%20Faculty[1]/AI&ML%20Faculty/Ashwini%20Biradar.jpg" alt="Ashwini Biradar">
+            <img class="faculty-img" src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20Faculty%5B1%5D/AI&ML%20Faculty/Ashwini%20Biradar.jpg?raw=true" alt="Ashwini Biradar">
             <div class="faculty-name">Ashwini Biradar</div>
             <div class="faculty-role">Assistant Professor</div>
             <div class="faculty-school">School of Mechanical Engineering</div>
@@ -135,7 +133,7 @@
         </div>
 
         <div class="faculty-card">
-            <img class="faculty-img" src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/AI&ML%20Faculty[1]/AI&ML%20Faculty/Priyanka%20Gupta.webp" alt="Priyanka Gupta">
+            <img class="faculty-img" src="https://raw.githubusercontent.com/VishalMache/Website_ai-ml/refs/heads/main/AI%26ML%20Faculty%5B1%5D/AI%26ML%20Faculty/Priyanka%20Gupta.webp" alt="Priyanka Gupta">
             <div class="faculty-name">Priyanka Gupta</div>
             <div class="faculty-role">Assistant Professor</div>
             <div class="faculty-school">School of Physics</div>
@@ -147,8 +145,8 @@
         </div>
 
         <div class="faculty-card">
-            <img class="faculty-img" src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/AI&ML%20Faculty[1]/AI&ML%20Faculty/Tanuja%20Lanjewar.webp" alt="Tanuja Pande">
-            <div class="faculty-name">Tanuja Pande</div>
+            <img class="faculty-img" src="https://raw.githubusercontent.com/VishalMache/Website_ai-ml/refs/heads/main/AI%26ML%20Faculty%5B1%5D/AI%26ML%20Faculty/Tanuja%20Lanjewar.webp" alt="Tanuja Pande">
+            <div class="faculty-name">Tanuja Lanjewar</div>
             <div class="faculty-role">Assistant Professor</div>
             <div class="faculty-school">School of Chemistry</div>
             <div class="faculty-icons">
@@ -159,7 +157,7 @@
         </div>
 
         <div class="faculty-card">
-            <img class="faculty-img" src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/AI&ML%20Faculty[1]/AI&ML%20Faculty/Moreshwar%20Mahale.jpg" alt="Moreshwar A. Mahale">
+            <img class="faculty-img" src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20Faculty%5B1%5D/AI&ML%20Faculty/Moreshwar%20Mahale.jpg?raw=true" alt="Moreshwar A. Mahale">
             <div class="faculty-name">Moreshwar A. Mahale</div>
             <div class="faculty-role">Assistant Professor</div>
             <div class="faculty-school">School of Mathematics</div>
