--- a/Student section/Professional_chapters.html
+++ b/Student section/Professional_chapters.html
@@ -15,7 +15,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg bg-light sticky-top">
   <div class="container-fluid">
-     <img src="https://colleges18.s3.ap-south-1.amazonaws.com/PCU_logo_152d67d738.png" alt="PCU Logo" width="200">
+     <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20website/Pcu%20Thumbnail%5B1%5D%20(1)/Pcu%20Thumbnail/PCU_logo_152d67d738.png?raw=true" alt="PCU Logo" width="200">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <!-- Dropdowns -->
