--- a/homepage.html
+++ b/homepage.html
@@ -9,151 +9,28 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      scroll-behavior: smooth;
-    }
-
-    .navbar {
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      transition: background-color 0.3s ease;
-    }
-    .navbar-nav .nav-link {
-      font-weight: 500;
-      transition: color 0.3s ease;
-    }
-    .navbar-nav .nav-link:hover {
-      color: #941C34;
-    }
-
-    .navbar-brand{
-      height: 100px; 
-      width:180px;
-    }
-
-    .carousel-img {
-  width: 100%;
-  height: 400px; /* Reduced from 550px for better proportion */
-  object-fit: cover;
-  object-position: center;
-  display: block;
-}
-
-/* Responsive sizing for different screen sizes */
-@media (max-width: 768px) {
-  .carousel-img {
-    height: 250px;
-  }
-}
-
-@media (max-width: 480px) {
-  .carousel-img {
-    height: 200px;
-  }
-}
-
-
-    .bg-custom_front {
-      background: linear-gradient(135deg, #941C34, #c23d50);
-      padding: 40px;
-      color: white;
-      border-radius: 15px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.2);
-    }
-
-    .card-custom {
-      border: none;
-      border-radius: 15px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.12);
-      transition: all 0.3s ease;
-    }
-    .card-custom:hover {
-      transform: translateY(-8px) scale(1.02);
-      box-shadow: 0 12px 25px rgba(0,0,0,0.18);
-    }
-
-    .section-title {
-      font-weight: 700;
-      font-size: 1.9rem;
-      margin-bottom: 20px;
-      color: #941C34;
-      text-align: center;
-    }
-
-    /* Notification list */
-    .list-group-item {
-      border: none;
-      border-bottom: 1px solid #eee;
-      transition: background-color 0.3s ease;
-    }
-    .list-group-item:hover {
-      background-color: #f9f9f9;
-    }
-
-    .scroll-box {
-      max-height: 220px;
-      overflow-y: auto;
-    }
-
-    footer {
-      background: #941C34;
-    }
-    .footer-link {
-      color: #ddd;
-      text-decoration: none;
-      position: relative;
-      transition: all 0.3s ease;
-    }
-    .footer-link::after {
-      content: '';
-      width: 0;
-      height: 2px;
-      background: #ffd700;
-      position: absolute;
-      left: 0;
-      bottom: -3px;
-      transition: width 0.3s ease;
-    }
-    .footer-link:hover {
-      color: #ffd700;
-    }
-    .footer-link:hover::after {
-      width: 100%;
-    }
-  </style>
+  <link href="homepage.css" rel="stylesheet">
 </head>
 <body>
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg bg-light sticky-top">
   <div class="container-fluid">
-    <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20website/Pcu%20Thumbnail%5B1%5D%20(1)/Pcu%20Thumbnail/PCU_logo_152d67d738.png?raw=true" alt="PCU Logo" width="200">
+    <a href="homepage.html">
+    <img class="navbar-brand" src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20website/Pcu%20Thumbnail%5B1%5D%20(1)/Pcu%20Thumbnail/PCU_logo_152d67d738.png?raw=true" alt="PCU Logo"></a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <!-- Dropdowns -->
+         <li class="nav-item"><a class="nav-link" href="homepage.html">Home</a></li> 
+        <li class="nav-item"><a class="nav-link" href="Faculty section/Faculty.html">Faculty Profile</a></li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">About</a>
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Student Corner</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">About Department</a></li>
-            <li><a class="dropdown-item" href="#">Vision & Mission</a></li>
+            <li><a class="dropdown-item" href="Student section/syllabus.html">Syllabus</a></li>
+            <li><a class="dropdown-item" href="Student section/Professional_chapters.html">Professional Chapters</a></li>
           </ul>
         </li>
-        <li class="nav-item">
-    <a class="nav-link" href="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/Faculty.html">Faculty Profile</a>
-</li>
-<li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Student Corner</a>
-    <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="../Website_ai-ml/Student section/syllabus.html">Syllabus</a></li>
-        <li><a class="dropdown-item" href="../Website_ai-ml/Student section/Professional_chapters.html">Professional Chapters</a></li>
-        <li><a class="dropdown-item" href="../Website_ai-ml/Student section/clubs.html">Clubs</a></li>
-        <li><a class="dropdown-item" href="workshops-events.html">Workshops</a></li>
-    </ul>
-</li>
-
-        <li class="nav-item"><a class="nav-link" href="#">Activities</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Activities and Workshops</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Student Satisfaction</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
       </ul>
@@ -202,7 +79,7 @@
       <div class="card card-custom p-4 flex-fill d-flex flex-column text-center">
         <h3 class="section-title">From HOD's Table</h3>
         <div class="d-flex justify-content-center">
-          <img src="AI&ML Faculty[1]/AI&ML Faculty/Swati Shirke.png" 
+          <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20website/AI&ML%20Faculty%5B1%5D/AI&ML%20Faculty/Swati%20Shirke.png?raw=true" 
                class="rounded-circle shadow my-3"
                style="width:150px;height:150px;object-fit:cover;">
         </div>
@@ -272,7 +149,8 @@
     <div class="row text-center text-md-start">
       <div class="col-md-4 mb-4">
         <h5 class="fw-bold mb-3">Connect With Us At</h5>
-        <p><i class="bi bi-geo-alt-fill me-2"></i> Gut No. 44, 46, 48, 49 and 50,<br>Sate, Maval<br>(PMRDA) Dist. Pune-412106, Maharashtra, India.</p>
+        <p><i class="bi bi-geo-alt-fill me-2"></i> Gut No. 44, 46, 48, 49 and 50,<br>Sate, Maval<br>(PMRDA) Dist. Pune-412106,
+Maharashtra, India.</p>
         <a href="https://www.google.com/maps/place/Pimpri+Chinchwad+University/@18.7486731,73.6048451,17z/data=!3m1!4b1!4m6!3m5!1s0x3bc2addaeb41d919:0xcc551cf73e3bdf1c!8m2!3d18.748668!4d73.60742!16s%2Fg%2F11pv9g71ty?entry=ttu&g_ep=EgoyMDI1MDgxNy4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="footer-link">Visit Us on Google Maps</a>
       </div>
       <div class="col-md-4 mb-4">
