--- a/homepage.html
+++ b/homepage.html
@@ -30,7 +30,7 @@
             <li><a class="dropdown-item" href="Student section/Professional_chapters.html">Professional Chapters</a></li>
           </ul>
         </li>
-        <li class="nav-item"><a class="nav-link" href="#">Activities and Workshops</a></li>
+        <li class="nav-item"><a class="nav-link" href="activity_workshop.html">Activities and Workshops</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Student Satisfaction</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
       </ul>
