All Webpages are linked together through GitHib Hosting

--- a/activity_workshop.html
+++ b/activity_workshop.html
@@ -18,15 +18,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link" href="homepage.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Faculty Profile</a></li>
+        <li class="nav-item"><a class="nav-link" href="Faculty section/Faculty.html">Faculty Profile</a></li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Student Corner</a>
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Student Corner</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Syllabus</a></li>
-            <li><a class="dropdown-item" href="#">Professional Chapters</a></li>
+            <li><a class="dropdown-item" href="Student section/syllabus.html">Syllabus</a></li>
+            <li><a class="dropdown-item" href="Student section/Professional_chapters.html">Professional Chapters</a></li>
           </ul>
         </li>
-        <li class="nav-item"><a class="nav-link" href="#">Activities and Workshops</a></li>
+        <li class="nav-item"><a class="nav-link" href="activity_workshop.html">Activities and Workshops</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Student Satisfaction</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
       </ul>
@@ -181,7 +181,7 @@ Maharashtra, India.</p>
       </div>
       <div class="col-md-4 mb-4">
         <h5 class="fw-bold mb-3">Contact</h5>
-        <p><i class="bi bi-envelope-fill me-2"></i> pccoeadmin@gmail.com</p>
+        <p><i class="bi bi-envelope-fill me-2"></i> info@pcu.edu.in</p>
       </div>
       <div class="col-md-4 mb-4">
         <h5 class="fw-bold mb-3">Important Links</h5>
