--- a/homepage.html
+++ b/homepage.html
@@ -24,7 +24,7 @@
          <li class="nav-item"><a class="nav-link" href="homepage.html">Home</a></li> 
         <li class="nav-item"><a class="nav-link" href="Faculty section/Faculty.html">Faculty Profile</a></li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Student Corner</a>
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Student Corner</a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="Student section/syllabus.html">Syllabus</a></li>
             <li><a class="dropdown-item" href="Student section/Professional_chapters.html">Professional Chapters</a></li>
