--- a/Student section/syllabus.html
+++ b/Student section/syllabus.html
@@ -7,11 +7,7 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <title>Syllabus | Student Corner - PCU University</title>
-  
-  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  
-  <!-- Custom CSS -->
   <link rel="stylesheet" href="syllabus.css">
 </head>
 <body>
@@ -20,25 +16,25 @@
   <!-- Navigation -->
  <nav class="navbar navbar-expand-lg bg-light sticky-top">
   <div class="container-fluid">
+    <a href="../homepage.html">
      <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20website/Pcu%20Thumbnail%5B1%5D%20(1)/Pcu%20Thumbnail/PCU_logo_152d67d738.png?raw=true" alt="PCU Logo" width="200">
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    </a>
+     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <!-- Dropdowns -->
         <li class="nav-item dropdown">
           
-          <li class="nav-item"><a class="nav-link" href="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Interface.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="../homepage.html">Home</a></li>
         </li>
-        <li class="nav-item"><a class="nav-link" href="#">Faculty Profile</a></li>
+        <li class="nav-item"><a class="nav-link" href="../Faculty section/Faculty.html">Faculty Profile</a></li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Student Corner</a>
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Student Corner</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Syllabus</a></li>
-            <li><a class="dropdown-item" href="#">Professional Chapters</a></li>
-            <li><a class="dropdown-item" href="#">Clubs</a></li>
-            <li><a class="dropdown-item" href="#">Workshops</a></li>
+            <li><a class="dropdown-item" href="syllabus.html">Syllabus</a></li>
+            <li><a class="dropdown-item" href="Professional_chapters.html">Professional Chapters</a></li>
           </ul>
         </li>
-        <li class="nav-item"><a class="nav-link" href="#">Activities</a></li>
+        <li class="nav-item"><a class="nav-link" href="../activity_workshop.html">Activities</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Student Satisfaction</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
       </ul>
