--- a/Faculty section/Faculty.html
+++ b/Faculty section/Faculty.html
@@ -22,7 +22,7 @@
        <li class="nav-item"><a class="nav-link" href="../homepage.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="Faculty.html">Faculty Profile</a></li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Student Corner</a>
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Student Corner</a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="../Student section/syllabus.html">Syllabus</a></li>
             <li><a class="dropdown-item" href="../Student section/Professional_chapters.html">Professional Chapters</a></li>
@@ -52,22 +52,22 @@
             <img class="faculty-img" src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20Faculty%5B1%5D/AI&ML%20Faculty/Swati%20Shirke.png?raw=true" alt="Dr. Swati Deshmukh">
             <div class="faculty-name">Dr. Swati Deshmukh</div>
             <div class="faculty-role">Head of Department</div>
-            <div class="faculty-school">School of Engineering & Technology</div>
+            <div class="faculty-school">CSE - AI & ML</div>
             <div class="faculty-icons">
-                <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/linkedin%20icon.png" alt="LinkedIn">
-                <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/website%20icon.png" alt="Website">
+                <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/linkedin%20icon.png?raw=true" alt="LinkedIn">
+                <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/website%20icon.png?raw=true" alt="Website">
             </div>
             <button class="view-details-btn" onclick="openModal(0)">View Details</button>
         </div>
 
         <div class="faculty-card">
             <img class="faculty-img" src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20Faculty%5B1%5D/AI&ML%20Faculty/Rahul%20Sonkamble.png?raw=true" alt="Dr. R. G. Biradar">
-            <div class="faculty-name">Dr. Rahul Ganpatrao Sonkamble</div>
+            <div class="faculty-name">Dr. Rahul Sonkamble</div>
             <div class="faculty-role">Assistant Professor</div>
-            <div class="faculty-school">School of Engineering & Technology</div>
+            <div class="faculty-school">CSE - AI & ML</div>
             <div class="faculty-icons">
-                <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/linkedin%20icon.png" alt="LinkedIn">
-                <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/website%20icon.png" alt="Website">
+                <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/linkedin%20icon.png?raw=true" alt="LinkedIn">
+                <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/website%20icon.png?raw=true" alt="Website">
             </div>
             <button class="view-details-btn" onclick="openModal(1)">View Details</button>
         </div>
@@ -76,22 +76,22 @@
             <img class="faculty-img" src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20Faculty%5B1%5D/AI&ML%20Faculty/Dr.Yudhishthir%20Raut.png?raw=true" alt="Dr. Yudhishthir Raut">
             <div class="faculty-name">Dr. Yudhishthir Raut</div>
             <div class="faculty-role">Assistant Professor</div>
-            <div class="faculty-school">School of Engineering & Technology</div>
+            <div class="faculty-school">CSE - AI & ML</div>
             <div class="faculty-icons">
-                <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/linkedin%20icon.png" alt="LinkedIn">
-                <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/website%20icon.png" alt="Website">
+                <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/linkedin%20icon.png?raw=true" alt="LinkedIn">
+                <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/website%20icon.png?raw=true" alt="Website">
             </div>
             <button class="view-details-btn" onclick="openModal(2)">View Details</button>
         </div>
 
         <div class="faculty-card">
             <img class="faculty-img" src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20Faculty%5B1%5D/AI&ML%20Faculty/Rupali%20Zambre.png?raw=true" alt="Ms. Rupali Samarth Zambre">
-            <div class="faculty-name">Ms. Rupali Samarth Zambre</div>
+            <div class="faculty-name">Ms. Rupali Zambre</div>
             <div class="faculty-role">Assistant Professor</div>
-            <div class="faculty-school">School of Computer Science</div>
+            <div class="faculty-school">CSE - AI & ML</div>
             <div class="faculty-icons">
-                <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/linkedin%20icon.png" alt="LinkedIn">
-                <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/website%20icon.png" alt="Website">
+                <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/linkedin%20icon.png?raw=true" alt="LinkedIn">
+                <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/website%20icon.png?raw=true" alt="Website">
             </div>
             <button class="view-details-btn" onclick="openModal(3)">View Details</button>
         </div>
@@ -100,10 +100,10 @@
             <img class="faculty-img" src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20Faculty%5B1%5D/AI&ML%20Faculty/Nilesh%20Pinjarkar.png?raw=true" alt="Mr. Nilesh R. Pinjarkar">
             <div class="faculty-name">Mr. Nilesh R. Pinjarkar</div>
             <div class="faculty-role">Assistant Professor</div>
-            <div class="faculty-school">School of Information Technology</div>
+            <div class="faculty-school">CSE - AI & ML</div>
             <div class="faculty-icons">
-                <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/linkedin%20icon.png" alt="LinkedIn">
-                <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/website%20icon.png" alt="Website">
+                <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/linkedin%20icon.png?raw=true" alt="LinkedIn">
+                <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/website%20icon.png?raw=true" alt="Website">
             </div>
             <button class="view-details-btn" onclick="openModal(4)">View Details</button>
         </div>
@@ -112,10 +112,10 @@
             <img class="faculty-img" src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20Faculty%5B1%5D/AI&ML%20Faculty/Vaibhavi%20Avachat.jpg?raw=true" alt="Dr. Meera Rao">
             <div class="faculty-name">Vaibhavi Umesh Avachat</div>
             <div class="faculty-role">Assistant Professor</div>
-            <div class="faculty-school">School of Electronics</div>
+            <div class="faculty-school">CSE - AI & ML</div>
             <div class="faculty-icons">
-                <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/linkedin%20icon.png" alt="LinkedIn">
-                <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/website%20icon.png" alt="Website">
+                <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/linkedin%20icon.png?raw=true" alt="LinkedIn">
+                <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/website%20icon.png?raw=true" alt="Website">
             </div>
             <button class="view-details-btn" onclick="openModal(5)">View Details</button>
         </div>
@@ -124,10 +124,10 @@
             <img class="faculty-img" src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20Faculty%5B1%5D/AI&ML%20Faculty/Ashwini%20Biradar.jpg?raw=true" alt="Ashwini Biradar">
             <div class="faculty-name">Ashwini Biradar</div>
             <div class="faculty-role">Assistant Professor</div>
-            <div class="faculty-school">School of Mechanical Engineering</div>
+            <div class="faculty-school">CSE - AI & ML</div>
             <div class="faculty-icons">
-                <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/linkedin%20icon.png" alt="LinkedIn">
-                <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/website%20icon.png" alt="Website">
+                <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/linkedin%20icon.png?raw=true" alt="LinkedIn">
+                <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/website%20icon.png?raw=true" alt="Website">
             </div>
             <button class="view-details-btn" onclick="openModal(6)">View Details</button>
         </div>
@@ -136,10 +136,10 @@
             <img class="faculty-img" src="https://raw.githubusercontent.com/VishalMache/Website_ai-ml/refs/heads/main/AI%26ML%20Faculty%5B1%5D/AI%26ML%20Faculty/Priyanka%20Gupta.webp" alt="Priyanka Gupta">
             <div class="faculty-name">Priyanka Gupta</div>
             <div class="faculty-role">Assistant Professor</div>
-            <div class="faculty-school">School of Physics</div>
+            <div class="faculty-school">CSE - AI & ML</div>
             <div class="faculty-icons">
-                <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/linkedin%20icon.png" alt="LinkedIn">
-                <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/website%20icon.png" alt="Website">
+                <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/linkedin%20icon.png?raw=true" alt="LinkedIn">
+                <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/website%20icon.png?raw=true" alt="Website">
             </div>
             <button class="view-details-btn" onclick="openModal(7)">View Details</button>
         </div>
@@ -148,10 +148,10 @@
             <img class="faculty-img" src="https://raw.githubusercontent.com/VishalMache/Website_ai-ml/refs/heads/main/AI%26ML%20Faculty%5B1%5D/AI%26ML%20Faculty/Tanuja%20Lanjewar.webp" alt="Tanuja Pande">
             <div class="faculty-name">Tanuja Lanjewar</div>
             <div class="faculty-role">Assistant Professor</div>
-            <div class="faculty-school">School of Chemistry</div>
+            <div class="faculty-school">CSE - AI & ML</div>
             <div class="faculty-icons">
-                <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/linkedin%20icon.png" alt="LinkedIn">
-                <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/website%20icon.png" alt="Website">
+                <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/linkedin%20icon.png?raw=true" alt="LinkedIn">
+                <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/website%20icon.png?raw=true" alt="Website">
             </div>
             <button class="view-details-btn" onclick="openModal(8)">View Details</button>
         </div>
@@ -160,10 +160,10 @@
             <img class="faculty-img" src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20Faculty%5B1%5D/AI&ML%20Faculty/Moreshwar%20Mahale.jpg?raw=true" alt="Moreshwar A. Mahale">
             <div class="faculty-name">Moreshwar A. Mahale</div>
             <div class="faculty-role">Assistant Professor</div>
-            <div class="faculty-school">School of Mathematics</div>
+            <div class="faculty-school">CSE - AI & ML</div>
             <div class="faculty-icons">
-                <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/linkedin%20icon.png" alt="LinkedIn">
-                <img src="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/website%20icon.png" alt="Website">
+                <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/linkedin%20icon.png?raw=true" alt="LinkedIn">
+                <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/website%20icon.png?raw=true" alt="Website">
             </div>
             <button class="view-details-btn" onclick="openModal(9)">View Details</button>
         </div>
