--- a/Student section/Professional_chapters.html
+++ b/Student section/Professional_chapters.html
@@ -29,7 +29,7 @@
         </li>
         <li class="nav-item"><a class="nav-link" href="../Faculty section/Faculty.html">Faculty Profile</a></li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Student Corner</a>
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Student Corner</a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="syllabus.html">Syllabus</a></li>
             <li><a class="dropdown-item" href="Professional_chapters.html">Professional Chapters</a></li>
